RESOLVED FIXED97820
Fix issue with ClassList which was hitting an assert in debug mode
https://bugs.webkit.org/show_bug.cgi?id=97820
Summary Fix issue with ClassList which was hitting an assert in debug mode
Erik Arvidsson
Reported 2012-09-27 13:29:35 PDT
Fix issue with ClassList which was hitting an assert in debug mode
Attachments
Patch (1.50 KB, patch)
2012-09-27 13:31 PDT, Erik Arvidsson
no flags
Patch (2.46 KB, patch)
2012-09-27 14:00 PDT, Erik Arvidsson
no flags
Erik Arvidsson
Comment 1 2012-09-27 13:31:16 PDT
Erik Arvidsson
Comment 2 2012-09-27 14:00:55 PDT
Erik Arvidsson
Comment 3 2012-09-27 14:03:28 PDT
Erik Arvidsson
Comment 4 2012-09-27 14:03:55 PDT
Comment on attachment 166060 [details] Patch I landed manually
Darin Adler
Comment 5 2012-09-27 16:38:11 PDT
Comment on attachment 166060 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=166060&action=review > Source/WebCore/bindings/v8/V8Binding.h:232 > - Vector<T> toNativeArguments(const v8::Arguments& args, size_t startIndex) > + Vector<T> toNativeArguments(const v8::Arguments& args, int startIndex) > { > ASSERT(startIndex <= args.Length()); > Vector<T> result; > typedef NativeValueTraits<T> TraitsType; > - size_t length = args.Length(); > - for (size_t i = startIndex; i < length; ++i) > + int length = args.Length(); > + for (int i = startIndex; i < length; ++i) > result.append(TraitsType::nativeValue(args[i])); Did you include this change intentionally, or by accident? Why doesn’t the change log mention this change?
Erik Arvidsson
Comment 6 2012-09-28 07:15:26 PDT
(In reply to comment #5) > Did you include this change intentionally, or by accident? Why doesn’t the change log mention this change? That was an intended change. Sorry for not pointing it out in the changelog. The reason was that, in debug mode, the code fails to compile due to comparison between int and size_t.
Eric Seidel (no email)
Comment 7 2012-10-08 16:15:37 PDT
Comment on attachment 166060 [details] Patch Cleared review? from attachment 166060 [details] so that this bug does not appear in http://webkit.org/pending-review. If you would like this patch reviewed, please attach it to a new bug (or re-open this bug before marking it for review again).
Note You need to log in before you can comment on or make changes to this bug.