Fix issue with ClassList which was hitting an assert in debug mode https://bugs.webkit.org/show_bug.cgi?id=97820

Reviewed by Ojan Vafai.

http://trac.webkit.org/changeset/129779 hit asserts in debug mode when trying to use fastGetAttribute on an SVG element.

No new tests. No change in behavior.

* bindings/v8/V8Binding.h:
(WebCore::toNativeArguments):
* html/ClassList.h:

Canonical link: https://commits.webkit.org/115809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129798 268f45cc-cd09-0410-ab3c-d52691b4dbfc